# rust-chat

server/: Cargo.toml
server/src/: client.rs  error.rs  lib.rs  main.rs  server.rs  worker.rs
server/src/model/: feed.rs  message.rs  mod.rs  user.rs
server/src/protocol/: request.rs  response.rs
