[package]
name = "server"
version = "0.1.0"
authors = ["Dao Lam <d.vinhlam@marketfinance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = "0.4.19"
serde = { version = "1.0.125", features = ["derive"] }
tokio = { version = "1.5.0", features = ["full"] }
futures = "0.3.5"
lazy_static = "1.4.0"
regex = "1.4.6"