[package]
name = "server"
version = "0.1.0"
authors = ["Dao Lam <d.vinhlam@marketfinance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.125", features = ["derive"] }
tokio = { version = "1.6.1", features = ["full"] }
tokio-stream = { version = "0.1.6", features = ["sync"] }
futures = "0.3.14"
lazy_static = "1.4.0"
regex = "1.4.6"
warp = "0.3.1"
serde_json = "1.0.64"
log = "0.4.14"
env_logger = "0.8.3"